# darkhttpd_android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
app/code/jni/: core.c  jni.list
app/code/jni/layer/: Core.java
app/code/king/darkhttpd/: ConfigHelper.java  Darkhttpd.java  MainActivity.java  PermissionTool.java  TaskService.java
app/res/layout/: activity_main.xml
app/res/values/: strings.xml
native/: AndroidManifest.xml  CMakeLists.txt  build.gradle
native/code/: darkhttpd.c  darkhttpd.h
